--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ Project/cmake-build-debug/CMakeFiles/3.8.2/CompilerIdC/CMakeCCompilerId.c
 Project/cmake-build-debug/CMakeFiles/Makefile2
 Project/cmake-build-debug/Makefile
 *.c
+Project/Inspiration/re.ino
+Project/Inspiration/EMMET.ino
+Project/Inspiration/2.ino
+Project/.idea/workspace.xml
