--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ Project/Inspiration/re.ino
 Project/Inspiration/EMMET.ino
 Project/Inspiration/2.ino
 Project/.idea/workspace.xml
+Project/Inspiration/yes.ino
+Project/.idea/workspace.xml
+*.xml
